# mistake-book

./: .gitignore  README.md  clear-icon-cache.ps1  generate-icons.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: HomePage.tsx  ImageCarousel.tsx  MistakeCard.tsx  MistakeForm.tsx  NotesPage.tsx  NotifyProvider.tsx  PlanPage.tsx  PomodoroPage.tsx  ReviewPage.tsx  SettingsPage.tsx  Sidebar.tsx  StatsPage.tsx  StudyStatsPage.tsx  ThemeProvider.tsx  TimerBar.tsx  TimerContext.tsx
