[package]
name = "mistake-book"
version = "1.0.0"
description = "考研错题本"
authors = [""]
edition = "2021"

[lib]
name = "mistake_book_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
base64 = "0.22"
chrono = "0.4"
